@@ -61,7 +61,9 @@ class DefaultTest < ActiveRecord::TestCase
 
   if current_adapter?(:PostgreSQLAdapter)
     def test_multiline_default_text
-      assert_equal "--- []\n\n", Default.columns_hash['multiline_default'].default
+      # older postgres versions represent the default with escapes ("\\012" for a newline)
+      assert ( "--- []\n\n" == Default.columns_hash['multiline_default'].default ||
+               "--- []\\012\\012" == Default.columns_hash['multiline_default'].default)
     end
   end
 end
