@@ -1,5 +1,7 @@
 *SVN*
 
+* PostgreSQL: support server versions 7.4 through 8.0 and the ruby-pg driver.  #11127 [jdavis]
+
 * Ensure association preloading doesn't break when an association returns nil. ##11145 [GMFlash]
 
 * Make dynamic finders respect the :include on HasManyThrough associations.  #10998. [cpytel]
